@@ -1,3 +1,6 @@
+CR-2008-01-17-0: Bugfix:    removed usage of ? operator in file_procedures.tcl
+                            ? seems not to work on all tcl/expect versions
+
 MD-2008-01-17-0: Enhancem.: added Issue test 2372
                  Review:    JG
 
